--- a/MandelbrotWPF/MainWindow.xaml
+++ b/MandelbrotWPF/MainWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="800" Width="800">
     <Grid>
-        
+        <Image Name="Image"/>
     </Grid>
 </Window>
